# OO2026Koodit-VkTht

./: README.md
Week1/OO26Vk1Tht/: CMakeLists.txt  main.cpp
Week3/OlioVk3Tehtava/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
Week4/: CMakeLists.txt  asiakas.cpp  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp  pankkitili.h
