cmake_minimum_required(VERSION 3.16)

project(OO26Vk1Tht LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(OO26Vk1Tht main.cpp)

include(GNUInstallDirs)
install(TARGETS OO26Vk1Tht
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
